Small fix for site spacing

--- a/src/less/components/site.less
+++ b/src/less/components/site.less
@@ -16,7 +16,7 @@
 .Site {
 	display: grid;
 	grid-template-columns: 2em repeat(3, 1fr);
-	padding: @space-xs 0;
+	padding: @space-xs;
 	position: relative;
 	overflow: hidden;
 
